Update to lecture before heading

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
 	<head lang="en">
   <meta charset="UTF-8">
@@ -9,3 +10,4 @@
   <p>Welcome.</p>
   <p>check sync!</p> 
 </body>
+</html>
