time tag: 2018-01-27 Sat add image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
 </head>
 <body>
   <h1>Ares Homepage</h1>
-  <p>Welcome.</p>
-  <p>check sync!</p> 
+  <div>
+   <img src="pics/self.png" width="400" height="400" alt="Ares">
+  </div>
+  <p>Coder/BodyBuilder</p>
+  <div>
+    Recent diet plan:
+    <ul>
+     <li>Chicken breast</li>
+     <li>Greek salad</li>
+     <li>Jumbo shrimp</li>
+     <li>Cod fillet</li>
+     <li>Edamame</li>
+    </ul>
+  </div>
+  <p>check sync! &copy;</p> 
 </body>
 </html>
